--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git@github.com:maple-labs/non-transparent-proxy.git
 [submodule "modules/globals"]
 	path = modules/globals
-	url = git@github.com:maple-labs/globals-v2-private.git
+	url = git@github.com:maple-labs/globals-v2.git
 [submodule "modules/forge-std"]
 	path = modules/forge-std
 	url = git@github.com:foundry-rs/forge-std.git
