fix: update submodule installation links

--- a/.github/workflows/forge-pr.yaml
+++ b/.github/workflows/forge-pr.yaml
@@ -16,7 +16,9 @@ jobs:
 
       # Add SSH keys where needed.
       - name: Install submodules
-        run: forge install
+        run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          forge install
 
-      - name: Run forge tests
+      - name: Run tests
         run: forge test
