--- a/.github/workflows/forge.yaml
+++ b/.github/workflows/forge.yaml
@@ -28,29 +28,29 @@ jobs:
         env:
           FOUNDRY_PROFILE: production
 
-    coverage_report:
-    name: Generate coverage report
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+    # coverage_report:
+    # name: Generate coverage report
+    # runs-on: ubuntu-latest
+    # steps:
+    # - uses: actions/checkout@v2
 
-    - name: Install Foundry
-      uses: onbjerg/foundry-toolchain@v1
-      with:
-        version: nightly
+    # - name: Install Foundry
+    #   uses: onbjerg/foundry-toolchain@v1
+    #   with:
+    #     version: nightly
 
-    - name: Install submodules
-      run: |
-        git config --global url."https://github.com/".insteadOf "git@github.com:"
-        git submodule update --init --recursive
-    - name: Generate coverage report
-      run: |
-        forge coverage --report lcov
-    - name: Report code coverage
-      uses: zgosalvez/github-actions-report-lcov@v1
-      with:
-        coverage-files: lcov.info
-        minimum-coverage: 95
-        artifact-name: code-coverage-report
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: ./
+    # - name: Install submodules
+    #   run: |
+    #     git config --global url."https://github.com/".insteadOf "git@github.com:"
+    #     git submodule update --init --recursive
+    # - name: Generate coverage report
+    #   run: |
+    #     forge coverage --report lcov
+    # - name: Report code coverage
+    #   uses: zgosalvez/github-actions-report-lcov@v1
+    #   with:
+    #     coverage-files: lcov.info
+    #     minimum-coverage: 95
+    #     artifact-name: code-coverage-report
+    #     github-token: ${{ secrets.GITHUB_TOKEN }}
+    #     working-directory: ./
