--- a/.github/workflows/forge-pr.yaml
+++ b/.github/workflows/forge-pr.yaml
@@ -15,9 +15,8 @@ jobs:
           version: nightly
 
       - name: Checkout submodules
-        run: |
-          git config --global url."https://github.com/".insteadOf "git@github.com:"
-          git submodule update --init --recursive
+        run: forge install
+          
 
       - name: Run tests
         run: forge test
