test: trying remove tests from coverage

--- a/.github/workflows/forge-pr.yaml
+++ b/.github/workflows/forge-pr.yaml
@@ -40,10 +40,17 @@ jobs:
     - name: Generate coverage report
       run: |
         forge coverage --report lcov
+
+    - name: Install lcov
+      run: apt-get install lcov
+
+    - name: Remove Tets from coverage
+      run:  lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
+
     - name: Report code coverage
       uses: zgosalvez/github-actions-report-lcov@v1
       with:
-        coverage-files: lcov.info
+        coverage-files: lcov.info.pruned
         minimum-coverage: 50
         artifact-name: code-coverage-report
         github-token: ${{ secrets.GITHUB_TOKEN }}
