--- a/.github/workflows/forge.yaml
+++ b/.github/workflows/forge.yaml
@@ -46,11 +46,18 @@ jobs:
     - name: Generate coverage report
       run: |
         forge coverage --report lcov
+
+    - name: Install lcov
+      run: sudo apt-get install lcov
+
+    - name: Remove Tets from coverage
+      run:  lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
+
     - name: Report code coverage
       uses: zgosalvez/github-actions-report-lcov@v1
       with:
-        coverage-files: lcov.info
-        minimum-coverage: 50
+        coverage-files: lcov.info.pruned
+        minimum-coverage: 90
         artifact-name: code-coverage-report
         github-token: ${{ secrets.GITHUB_TOKEN }}
         working-directory: ./
