--- a/.github/workflows/forge-pr.yaml
+++ b/.github/workflows/forge-pr.yaml
@@ -44,7 +44,7 @@ jobs:
     - name: Install lcov
       run: sudo apt-get install lcov
 
-    - name: Remove Tets from coverage
+    - name: Remove Tests from coverage
       run:  lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
 
     - name: Report code coverage
