--- a/foundry.toml
+++ b/foundry.toml
@@ -8,5 +8,11 @@ verbosity       = 3                       # The verbosity of tests
 block_timestamp = 1_685_721_539           # Timestamp for tests (non-zero)
 gas_limit       = "18446744073709551615"  # Gas limit for tests
 
+[invariant]
+runs           = 100    # The number of calls to make in the invariant tests
+depth          = 100    # The number of times to run the invariant tests
+call_override  = false  # Override calls
+fail_on_revert = true   # Fail the test if the contract reverts
+
 [profile.production]
 optimizer = true
