--- a/foundry.toml
+++ b/foundry.toml
@@ -1,18 +1,19 @@
 [profile.default]
-contracts       = 'contracts'             # The source directory
-test            = 'tests'                 # The test directory
-libs            = ['modules']             # A list of library directories
-optimizer       = false                   # Enable or disable the solc optimizer
-optimizer_runs  = 200                     # The number of optimizer runs
-verbosity       = 3                       # The verbosity of tests
-block_timestamp = 1_685_721_539           # Timestamp for tests (non-zero)
-gas_limit       = "18446744073709551615"  # Gas limit for tests
+contracts       = 'contracts'            # The source directory
+test            = 'tests'                # The test directory
+libs            = ['modules']            # A list of library directories
+optimizer       = false                  # Enable or disable the solc optimizer
+optimizer_runs  = 200                    # The number of optimizer runs
+verbosity       = 3                      # The verbosity of tests
+block_timestamp = 1_685_721_539          # Timestamp for tests (non-zero)
+gas_limit       = "18446744073709551615" # Gas limit for tests
 
-[invariant]
-runs           = 100    # The number of calls to make in the invariant tests
-depth          = 200    # The number of times to run the invariant tests
-call_override  = false  # Override calls
-fail_on_revert = true   # Fail the test if the contract reverts
+# runs           = 100                     # The number of calls to make in the invariant tests
+# depth          = 100                     # The number of times to run the invariant tests
+# call_override  = false                   # Override calls
+# fail_on_revert = true                    # Fail the test if the contract reverts
 
 [profile.production]
 optimizer = true
+runs      = 1000   # The number of calls to make in the invariant tests
+depth     = 1000   # The number of times to run the invariant tests
