--- a/foundry.toml
+++ b/foundry.toml
@@ -1,19 +1,27 @@
 [profile.default]
-contracts       = 'contracts'            # The source directory
-test            = 'tests'                # The test directory
-libs            = ['modules']            # A list of library directories
-optimizer       = false                  # Enable or disable the solc optimizer
-optimizer_runs  = 200                    # The number of optimizer runs
-verbosity       = 3                      # The verbosity of tests
-block_timestamp = 1_685_721_539          # Timestamp for tests (non-zero)
-gas_limit       = "18446744073709551615" # Gas limit for tests
+contracts = 'contracts'
+test = 'tests'
+libs = ['modules']
+optimizer = false
+block_timestamp = 1_685_721_539
+gas_limit = "18446744073709551615"
+verbosity = 3
 
-# runs           = 100                     # The number of calls to make in the invariant tests
-# depth          = 100                     # The number of times to run the invariant tests
-# call_override  = false                   # Override calls
-# fail_on_revert = true                    # Fail the test if the contract reverts
+[profile.default.fuzz]
+runs = 1_000
 
-[profile.production]
+[profile.default.invariant]
+runs = 100
+depth = 100
+fail_on_revert = true
+
+[profile.ci]
 optimizer = true
-runs      = 1000   # The number of calls to make in the invariant tests
-depth     = 1000   # The number of times to run the invariant tests
+optimizer_runs = 200
+
+[profile.ci.fuzz]
+runs = 1_000_000
+
+[profile.ci.invariant]
+runs = 1_000
+depth = 1_000
