--- a/foundry.toml
+++ b/foundry.toml
@@ -20,8 +20,8 @@ optimizer = true
 optimizer_runs = 200
 
 [profile.ci.fuzz]
-runs = 1_000_000
+runs = 100_000
 
 [profile.ci.invariant]
-runs = 1_000
+runs = 100
 depth = 1_000
