--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,43 +1,84 @@
 name: CI
 
 on:
+  pull_request:
   push:
     branches:
       - main
 
 jobs:
-  ci:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      - name: Install Foundry
-        uses: onbjerg/foundry-toolchain@v1
-        with:
-          version: nightly
+  # Check code is formatted correctly.
+  format:
 
-      - name: Install submodules
-        run: |
-          git config --global url."https://github.com/".insteadOf "git@github.com:"
-          forge install
+  # Check all linter rules are satisfied.
+  lint:
 
-      - name: Run forge tests
-        run: forge test
-        env:
-          FOUNDRY_PROFILE: production
-          ETH_RPC_URL: ${{secrets.ETH_RPC_URL}}
+  # Build contracts.
+  build:
 
-      - name: Generate code coverage report
-        run: |
-          forge coverage --report lcov
-          sudo apt-get install lcov
-          lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
+  # Run unit tests.
+  test:
 
-      - name: Report code coverage
-        uses: zgosalvez/github-actions-report-lcov@v1
-        with:
-          coverage-files: lcov.info.pruned
-          minimum-coverage: 90
-          artifact-name: code-coverage-report
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: ./
+  # Run fuzz tests.
+  fuzz:
+
+  # Run integration tests.
+  integration:
+
+  # Run invariant tests.
+  invariants:
+
+  # Run formal verification.
+  verify:
+
+  # Generate code coverage report.
+  coverage:
+
+  # Generate gas usage report.
+  gas:
+
+  # Generate documentation from NatSpec.
+  docs:
+
+  # Run static analysis.
+  slither:
+
+  # Package artifacts for publishing.
+  package:
+
+  # ci:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+
+  #     - name: Install Foundry
+  #       uses: foundry-rs/foundry-toolchain@v1
+  #       with:
+  #         version: nightly
+
+  #     - name: Install submodules
+  #       run: |
+  #         git config --global url."https://github.com/".insteadOf "git@github.com:"
+  #         forge install
+
+  #     - name: Run forge tests
+  #       run: forge test
+  #       env:
+  #         FOUNDRY_PROFILE: production
+  #         ETH_RPC_URL: ${{secrets.ETH_RPC_URL}}
+
+  #     - name: Generate code coverage report
+  #       run: |
+  #         forge coverage --report lcov
+  #         sudo apt-get install lcov
+  #         lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
+
+  #     - name: Report code coverage
+  #       uses: zgosalvez/github-actions-report-lcov@v1
+  #       with:
+  #         coverage-files: lcov.info.pruned
+  #         minimum-coverage: 90
+  #         artifact-name: code-coverage-report
+  #         github-token: ${{ secrets.GITHUB_TOKEN }}
+  #         working-directory: ./
