--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,84 +1,95 @@
 name: CI
 
 on:
-  pull_request:
   push:
     branches:
       - main
+  pull_request:
 
 jobs:
 
   # Check code is formatted correctly.
   format:
+    needs:
 
   # Check all linter rules are satisfied.
   lint:
+    needs:
 
   # Build contracts.
   build:
+    needs:
 
   # Run unit tests.
   test:
+    runs-on: ubuntu-latest
+    needs:
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
+      - name: Install submodules
+        run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          forge install
+
+      - name: Run forge tests
+        run: forge test
+        env:
+          FOUNDRY_PROFILE: production
+          ETH_RPC_URL: ${{secrets.ETH_RPC_URL}}
 
   # Run fuzz tests.
   fuzz:
+    needs:
 
   # Run integration tests.
   integration:
+    needs:
 
   # Run invariant tests.
   invariants:
+    needs:
 
   # Run formal verification.
   verify:
+    needs:
 
   # Generate code coverage report.
   coverage:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate code coverage report
+        run: |
+          forge coverage --report lcov
+          sudo apt-get install lcov
+          lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
+
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v1
+        with:
+          coverage-files: lcov.info.pruned
+          minimum-coverage: 90
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: ./
 
   # Generate gas usage report.
   gas:
+    needs:
 
   # Generate documentation from NatSpec.
   docs:
+    needs:
 
   # Run static analysis.
   slither:
+    needs:
 
   # Package artifacts for publishing.
   package:
-
-  # ci:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-
-  #     - name: Install Foundry
-  #       uses: foundry-rs/foundry-toolchain@v1
-  #       with:
-  #         version: nightly
-
-  #     - name: Install submodules
-  #       run: |
-  #         git config --global url."https://github.com/".insteadOf "git@github.com:"
-  #         forge install
-
-  #     - name: Run forge tests
-  #       run: forge test
-  #       env:
-  #         FOUNDRY_PROFILE: production
-  #         ETH_RPC_URL: ${{secrets.ETH_RPC_URL}}
-
-  #     - name: Generate code coverage report
-  #       run: |
-  #         forge coverage --report lcov
-  #         sudo apt-get install lcov
-  #         lcov --remove ./lcov.info -o ./lcov.info.pruned 'tests/*'
-
-  #     - name: Report code coverage
-  #       uses: zgosalvez/github-actions-report-lcov@v1
-  #       with:
-  #         coverage-files: lcov.info.pruned
-  #         minimum-coverage: 90
-  #         artifact-name: code-coverage-report
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         working-directory: ./
+    needs:
