fix: update job name to size

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,7 +68,7 @@ jobs:
       - run: echo TODO
 
   # Check contract sizes.
-  verify:
+  size:
     runs-on: ubuntu-latest
     needs: [test, verify]
     steps:
