ci: add update-only for all reports

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,6 +102,7 @@ jobs:
           artifact-name: code-coverage-report
           github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: ./
+          update-comment: true
 
   # Post gas report.
   gas:
@@ -118,6 +119,7 @@ jobs:
           message-id: ${{ github.run_id }}
           message-path: gas.txt
           preformatted: true
+          update-only: true
 
   # Generate slither report.
   slither:
