--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,7 +104,7 @@ jobs:
           working-directory: ./
           update-comment: true
 
-  # Post gas report.
+  # Post the gas report.
   gas:
     runs-on: ubuntu-latest
     needs: [test, verify]
