ci: Add contract size check (SC-13191) (#40)
* ci: update size check job

* fix: add oversized contract

* fix: update contract ordering

* fix: update job name to size

* ci: fix typo

* ci: add repo setup to size check

* ci: remove oversized contract

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,28 @@ jobs:
     steps:
       - run: echo TODO
 
+  # Check contract sizes.
+  size:
+    runs-on: ubuntu-latest
+    needs: [test, verify]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
+      - name: Install submodules
+        run: |
+          git config --global url."https://github.com/".insteadOf "git@github.com:"
+          forge install
+
+      - run: scripts/size.sh
+        env:
+          FOUNDRY_PROFILE: ci
+
   # Check and generate code coverage report.
   coverage:
     runs-on: ubuntu-latest
